--- a/public/support.html
+++ b/public/support.html
@@ -15,7 +15,7 @@
 			});
 
 			webrtc.on('readyToCall', function () {
-				webrtc.joinRoom('appspeed-support');
+				webrtc.joinRoom('appspeedsupport');
 			});
 		</script>
 	</body>
